--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -4,7 +4,7 @@
       "name": "DRA. VEGA"
     },
     "facials": {
-      "caption": "TRATAMIENTOS FACIALES",
+      "title": "TRATAMIENTOS FACIALES",
       "rinomodelacion": "RINOMODELACION",
       "lips": "LABIOS",
       "botox": "BOTOX",
@@ -12,7 +12,7 @@
       "laserFacialRejuvenation": "REJUVENECIMIENTO FASIAL LASER"
     },
     "bodyTreatments": {
-      "caption": "TRATAMIENTOS CORPORALES",
+      "title": "TRATAMIENTOS CORPORALES",
       "mela":"MELA",
       "laserMela":"MELA LASER",
       "carboxiterapia": "CARBOXITERAPIA",
