--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,9 +1,9 @@
 {
-  "menu": {
+  "nav": {
     "me": {
       "name": "DRA. VEGA",
-      "mail": "",
-      "telephonNumber": "",
+      "mail": "HERNAN.CASLA@GMAIL.COM",
+      "telephonNumber": "(011) 230922716",
       "facebookAccount": "",
       "instagramAccount": "",
       "whatsappAccount": ""
