--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,12 +16,12 @@
     },
     "contact": {
       "title": "Contact Us",
-      "address": "Merlo 4775, Avellaneda, Buenos Aires",
+      "address": "29 Rue de la Division Leclerc, 91300 Massy, Francia",
       "celltelephone": "CellPhone: (011) 230922716",
       "telephone": "Phone: (011) 230922716"
     },
     "teamSolution": "Team Solutions",
-    "allRigthsReserved": "© 2020 Dra. Vega. All rigths reserved.",
+    "allRigthsReserved": "Copy Rigths © 2020 Dra. Vega. All rigths reserved.",
     "madeBy": "Made by Ceballos OH"
   },
   "nav": {
